// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListWithPagination renders in grid mode 1`] = `
<DocumentFragment>
  <div
    class="ant-list ant-list-split ant-list-grid ant-list-something-after-last-item"
    data-test-id="pagination-list"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-row"
          style="margin-left: -8px; margin-right: -8px;"
        >
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                1
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                2
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                3
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                4
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                5
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                6
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                7
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                8
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                9
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                10
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                11
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                12
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                13
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                14
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                15
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                16
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                17
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                18
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                19
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                20
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                21
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                22
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                23
              </div>
            </div>
          </div>
          <div>
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                24
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <ul
        class="ant-pagination ant-col-24"
      >
        <li
          class="ant-pagination-total-text"
        >
          1-50 of 100
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          aria-disabled="false"
          class="ant-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListWithPagination renders with all props 1`] = `
<DocumentFragment>
  <div
    class="ant-list ant-list-split ant-list-something-after-last-item"
    data-test-id="pagination-list"
  >
    <div
      class="ant-list-header"
    >
      Test
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item"
          >
            1
          </li>
          <li
            class="ant-list-item"
          >
            2
          </li>
          <li
            class="ant-list-item"
          >
            3
          </li>
          <li
            class="ant-list-item"
          >
            4
          </li>
          <li
            class="ant-list-item"
          >
            5
          </li>
          <li
            class="ant-list-item"
          >
            6
          </li>
          <li
            class="ant-list-item"
          >
            7
          </li>
          <li
            class="ant-list-item"
          >
            8
          </li>
          <li
            class="ant-list-item"
          >
            9
          </li>
          <li
            class="ant-list-item"
          >
            10
          </li>
          <li
            class="ant-list-item"
          >
            11
          </li>
          <li
            class="ant-list-item"
          >
            12
          </li>
          <li
            class="ant-list-item"
          >
            13
          </li>
          <li
            class="ant-list-item"
          >
            14
          </li>
          <li
            class="ant-list-item"
          >
            15
          </li>
          <li
            class="ant-list-item"
          >
            16
          </li>
          <li
            class="ant-list-item"
          >
            17
          </li>
          <li
            class="ant-list-item"
          >
            18
          </li>
          <li
            class="ant-list-item"
          >
            19
          </li>
          <li
            class="ant-list-item"
          >
            20
          </li>
          <li
            class="ant-list-item"
          >
            21
          </li>
          <li
            class="ant-list-item"
          >
            22
          </li>
          <li
            class="ant-list-item"
          >
            23
          </li>
          <li
            class="ant-list-item"
          >
            24
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <ul
        class="ant-pagination"
      >
        <li
          class="ant-pagination-total-text"
        >
          26-50 of 100
        </li>
        <li
          aria-disabled="false"
          class="ant-pagination-prev"
          tabindex="0"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-3"
          tabindex="0"
          title="3"
        >
          <a
            rel="nofollow"
          >
            3
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-4"
          tabindex="0"
          title="4"
        >
          <a
            rel="nofollow"
          >
            4
          </a>
        </li>
        <li
          aria-disabled="false"
          class="ant-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListWithPagination renders with required props 1`] = `
<DocumentFragment>
  <div
    class="ant-list ant-list-split ant-list-something-after-last-item"
    data-test-id="pagination-list"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item"
          >
            0
          </li>
          <li
            class="ant-list-item"
          >
            1
          </li>
          <li
            class="ant-list-item"
          >
            2
          </li>
          <li
            class="ant-list-item"
          >
            3
          </li>
          <li
            class="ant-list-item"
          >
            4
          </li>
          <li
            class="ant-list-item"
          >
            5
          </li>
          <li
            class="ant-list-item"
          >
            6
          </li>
          <li
            class="ant-list-item"
          >
            7
          </li>
          <li
            class="ant-list-item"
          >
            8
          </li>
          <li
            class="ant-list-item"
          >
            9
          </li>
          <li
            class="ant-list-item"
          >
            10
          </li>
          <li
            class="ant-list-item"
          >
            11
          </li>
          <li
            class="ant-list-item"
          >
            12
          </li>
          <li
            class="ant-list-item"
          >
            13
          </li>
          <li
            class="ant-list-item"
          >
            14
          </li>
          <li
            class="ant-list-item"
          >
            15
          </li>
          <li
            class="ant-list-item"
          >
            16
          </li>
          <li
            class="ant-list-item"
          >
            17
          </li>
          <li
            class="ant-list-item"
          >
            18
          </li>
          <li
            class="ant-list-item"
          >
            19
          </li>
          <li
            class="ant-list-item"
          >
            20
          </li>
          <li
            class="ant-list-item"
          >
            21
          </li>
          <li
            class="ant-list-item"
          >
            22
          </li>
          <li
            class="ant-list-item"
          >
            23
          </li>
          <li
            class="ant-list-item"
          >
            24
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <ul
        class="ant-pagination"
      >
        <li
          class="ant-pagination-total-text"
        >
          1-50 of 100
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-prev ant-pagination-disabled"
          title="Previous Page"
        >
          <button
            class="ant-pagination-item-link"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a
            rel="nofollow"
          >
            1
          </a>
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-2"
          tabindex="0"
          title="2"
        >
          <a
            rel="nofollow"
          >
            2
          </a>
        </li>
        <li
          aria-disabled="false"
          class="ant-pagination-next"
          tabindex="0"
          title="Next Page"
        >
          <button
            class="ant-pagination-item-link"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
